feat: update button style guide

--- a/src/screens/styleguide/StyleGuide.scss
+++ b/src/screens/styleguide/StyleGuide.scss
@@ -57,7 +57,7 @@ hr {
 
 .code-preview-code {
   padding: 24px;
-  background-color: #dddddd;
+  background-color: #eeeeee;
   position: relative;
 }
 
