--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import "./var.scss";
 
 $primary: #f47821 !default;
-$light: #dddddd !default;
+$light: #ededed !default;
 $font-size-base: 14;
 @import "~bootstrap/scss/bootstrap.scss";
 
