feat: update typography

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,5 +18,5 @@ code {
 // fonts
 @import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
 * {
-  font-family: "Lato", sans-serif !important;
+  font-family: "Lato", sans-serif;
 }
