feat: add typography

--- a/src/screens/styleguide/StyleGuide.scss
+++ b/src/screens/styleguide/StyleGuide.scss
@@ -40,7 +40,7 @@ header .spacer {
   margin: 32px auto;
 }
 
-hr {
+hr.thick {
   margin-top: 32px !important;
   margin-bottom: 32px !important;
 }
