refactor: move routes; remove todos

--- a/src/screens/home/Home.scss
+++ b/src/screens/home/Home.scss
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: transparentize(#282c34, 0.5);
+  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
